add book form uptade

--- a/templates/publisher/book_list.html
+++ b/templates/publisher/book_list.html
@@ -23,7 +23,7 @@
                 <li class="breadcrumb-item">
                     <a href="#"></a>
 
-                    <a  class="btn btn-sm btn-success" href="" style="padding: 8px; float: right; background-color: green; color: white;">Add Book</a>
+                    <a  class="btn btn-sm btn-success" href="{% url 'uabook_form' %}" style="padding: 8px; float: right; background-color: green; color: white;">Add Book</a>
                 </li>
             </ol>
 
