delete request update

--- a/templates/publisher/base.html
+++ b/templates/publisher/base.html
@@ -43,10 +43,10 @@
         <a class="nav-link" href="">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Group Chat</a>
+        <a class="nav-link" href="{% url 'ulchat' %}">Group Chat</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Delete Request</a>
+        <a class="nav-link" href=" {% url 'request_form' %}">Delete Request</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="">Send Feedback</a>
