--- a/templates/librarian/base.html
+++ b/templates/librarian/base.html
@@ -59,7 +59,7 @@
     </button>
 
     <!-- Navbar Search -->
-      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0" action="">
+      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0" action="{% url 'lsearch' %}">
         <div class="input-group">
             <input type="text" class="form-control" name="query" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
@@ -79,7 +79,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                 <a class="dropdown-item">{{ user.username }}</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="" data-toggle="modal" data-target="#logoutModal">Logout</a>
+                <a class="dropdown-item" href="{% url 'logout' %}" data-toggle="modal" data-target="#logoutModal">Logout</a>
             </div>
         </li>
     </ul>
@@ -93,7 +93,7 @@
 <ul class="sidebar navbar-nav">
 
     <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'librarian' %}">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Librarian Dashboard</span>
         </a>
@@ -105,32 +105,32 @@
         </a>
     </li>
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'llchat' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Group Chat</span>
         </a>
     </li>
         <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'labook_form' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Add Book</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'llbook' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Recent Added Books</span>
         </a>
     </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'lmbook' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Manage Books</span>
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'ldrequest' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Delete Request</span>
         </a>
@@ -163,7 +163,7 @@
             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-               <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+               <a class="btn btn-primary" href="/logout">Logout</a>
             </div>
         </div>
     </div>
