--- a/templates/librarian/confirm_delete.html
+++ b/templates/librarian/confirm_delete.html
@@ -34,7 +34,7 @@
                   Are you sure to delete detail of book {{ object }} ?
                 </div>
                 <input type="submit" class="btn btn-danger" value="Yes, delete it" />
-                <a class="btn btn-success" href="{% url 'lmbook' %}">No, just I've tried the delete button</a>
+                <a class="btn btn-success" href="{% url 'lmbook' %}">No, just I've  clicked at the wrong place</a>
             </form>
         </div>
     </div>
