--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -59,7 +59,7 @@
     </button>
 
     <!-- Navbar Search -->
-      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0" action="">
+      <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0" action="{% url 'asearch' %}">
         <div class="input-group">
             <input type="text" class="form-control" name="query" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
@@ -93,7 +93,7 @@
 <ul class="sidebar navbar-nav">
 
     <li class="nav-item active">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'dashboard' %}">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Admin Dashboard</span>
         </a>
@@ -105,44 +105,44 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'alchat' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Group Chat</span>
         </a>
     </li>
         <li class="nav-item">
-        <a class="nav-link" href="m' %}">
+        <a class="nav-link" href="{% url 'aabook_form' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Add Book</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'albook' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Recent Added Books</span>
         </a>
     </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'ambook' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Manage Books</span>
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" href=" %}">
+        <a class="nav-link" href="{% url 'adrequest' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">Delete Request</span>
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" href=" %}">
+        <a class="nav-link" href="{% url 'afeedback' %}">
             <i class="fas fa-book text-primary"></i>
             <span style="color: white">User Feedback</span>
         </a>
     </li>
      <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url 'aluser' %}">
             <i class="fas fa-user text-primary"></i>
             <span style="color: white">Manage User</span>
         </a>
