--- a/templates/admin/confirm_delete2.html
+++ b/templates/admin/confirm_delete2.html
@@ -1,4 +1,4 @@
-{% extends 'librarian/base.html' %}
+{% extends 'dashboard/base.html' %}
 
 
 
@@ -34,7 +34,7 @@
                   Are you sure to delete detail of book {{ object }} ?
                 </div>
                 <input type="submit" class="btn btn-danger" value="Yes, delete it" />
-                <a class="btn btn-success" href="{% url 'librarian' %}">No, just I've clicked at the wrong place</a>
+                <a class="btn btn-success" href="{% url 'ambook' %}">No, just I've tried the delete button</a>
             </form>
         </div>
     </div>
