--- a/templates/admin/confirm_delete3.html
+++ b/templates/admin/confirm_delete3.html
@@ -1,5 +1,4 @@
-{% extends 'librarian/base.html' %}
-
+{% extends 'dashboard/base.html' %}
 
 
 
@@ -12,12 +11,12 @@
         <div class="container-fluid">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="">Book Title : {{ object.title }} </a>
+                    <a href="">User : {{ object.username }} </a>
             </ol>
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-table text-warning"></i>
-                    Details Of Book
+                    Details Of User
                 </div>
                 <div class="card-body">
                     {% for message in messages %}
@@ -31,10 +30,10 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="alert alert-warning" role="alert">
-                  Are you sure to delete detail of book {{ object }} ?
+                  Are you sure to delete detail of {{ object }} ?
                 </div>
                 <input type="submit" class="btn btn-danger" value="Yes, delete it" />
-                <a class="btn btn-success" href="{% url 'librarian' %}">No, just I've clicked at the wrong place</a>
+                <a class="btn btn-success" href="{% url 'aluser' %}">No, just I've tried the delete button</a>
             </form>
         </div>
     </div>
