--- a/templates/admin/user_detail.html
+++ b/templates/admin/user_detail.html
@@ -1,7 +1,5 @@
-{% extends 'librarian/base.html' %}
-
-
-
+{% extends 'dashboard/base.html' %}
+{% load static %}
 
 {% block body %}
 <div class="container-fluid">
@@ -12,12 +10,12 @@
         <div class="container-fluid">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="">Book Title : {{ object.title }} </a>
+                    <a href="">User : {{ object.username }} </a>
             </ol>
             <div class="card mb-3">
                 <div class="card-header">
                     <i class="fas fa-table text-warning"></i>
-                    Details Of Book
+                    Details Of User
                 </div>
                 <div class="card-body">
                     {% for message in messages %}
@@ -26,20 +24,22 @@
                         </div>
                     {% endfor %}
 
-    <div class="row">
+ <div class="row">
         <div class="col-12">
-            <form method="post">
-                {% csrf_token %}
-                <div class="alert alert-warning" role="alert">
-                  Are you sure to delete detail of book {{ object }} ?
-                </div>
-                <input type="submit" class="btn btn-danger" value="Yes, delete it" />
-                <a class="btn btn-success" href="{% url 'librarian' %}">No, just I've clicked at the wrong place</a>
-            </form>
+            <ul class="list-group">
+              <li class="list-group-item"><strong>Username:</strong> {{ object.username }}</li>
+              <li class="list-group-item"><strong>Firstname :</strong> {{ object.first_name }}</li>
+              <li class="list-group-item"><strong>Lastname :</strong> {{ object.last_name }}</li>
+              <li class="list-group-item"><strong>Email :</strong> {{ object.email }}</li>
+            </ul>
         </div>
     </div>
 
-                  
+    <div class="row top-buffer" style="padding-top: 10px">
+        <div class="col-12">
+                <a href="{% url 'aluser' %}"><button type="button" class="btn btn-success">Back</button></a>
+        </div>
+    </div>
 
 
           </div>
