--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -93,7 +93,7 @@
 <ul class="sidebar navbar-nav">
 
     <li class="nav-item active">
-        <a class="nav-link" href="{% url 'dashboard' %}">
+        <a class="nav-link" href="{% url 'admin' %}">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Admin Dashboard</span>
         </a>
